--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <name>SlashServer-Velocity</name>
 
   <properties>
-    <java.version>11</java.version>
+    <java.version>16</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -34,15 +34,7 @@
   <repositories>
     <repository>
       <id>velocitypowered-repo</id>
-      <url>https://repo.velocitypowered.com/snapshots/</url>
-    </repository>
-    <repository>
-      <id>minecraft-libraries</id>
-      <url>https://libraries.minecraft.net/</url>
-    </repository>
-    <repository>
-      <id>spongepowered-repo</id>
-      <url>https://repo.spongepowered.org/maven</url>
+      <url>https://nexus.velocitypowered.com/repository/maven-public/</url>
     </repository>
   </repositories>
 
@@ -50,7 +42,7 @@
     <dependency>
       <groupId>com.velocitypowered</groupId>
       <artifactId>velocity-api</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>3.0.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
